--- a/Front-End/spa-libs/Angular/ng-cli-demo/src/app/app.component.html
+++ b/Front-End/spa-libs/Angular/ng-cli-demo/src/app/app.component.html
@@ -1,2 +1,13 @@
 <notes-login></notes-login>
 <router-outlet></router-outlet>
+
+<div>
+    <nav class='navbar navbar-default'>
+        <div class='container-fluid'>
+			Hello world
+        </div>
+    </nav>
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
