--- a/Front-End/spa-libs/Angular/ng-cli-demo/src/app/auth/login-component/login.component.html
+++ b/Front-End/spa-libs/Angular/ng-cli-demo/src/app/auth/login-component/login.component.html
@@ -1,13 +1,18 @@
 <mat-toolbar color="primary">
-	<mat-toolbar-row>
+	<mat-toolbar-row *ngIf="!isAuthenticated">
 		<mat-form-field class="example-full-width">
-			<input matInput value="email">
-		</mat-form-field>
-	
-		<mat-form-field class="example-full-width">
-			<input matInput value="password">
-		</mat-form-field>
-
+				<input #email matInput value="cement.elek@gmail.com">
+			</mat-form-field>
 		
+			<mat-form-field class="example-full-width">
+				<input #password matInput value="minad123" (keyup.enter)="onEnter(email.value, password.value)">
+			</mat-form-field>
+			
+			<button mat-button (click)="onLoginClick(email.value, password.value)">Login</button>			
+	</mat-toolbar-row>
+		
+	<mat-toolbar-row *ngIf="isAuthenticated">
+		Szia
+		{{account.FirstName}} &nbsp; {{account.LastName}}
 	</mat-toolbar-row>
 </mat-toolbar>
