--- a/DotNet/MyUtils/FileRepositoryApi/Views/Shared/_Layout.cshtml
+++ b/DotNet/MyUtils/FileRepositoryApi/Views/Shared/_Layout.cshtml
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
 
-    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-
-    <link href="~/Styles/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
+    @Styles.Render("~/styles/global")
+    @Scripts.Render("~/scripts/global")
 </head>
 <body>
     <div class="container-fluid">
