--- a/UI/layouts/bootstrap-column.html
+++ b/UI/layouts/bootstrap-column.html
@@ -4,6 +4,11 @@
 	<link rel="stylesheet" type="text/css" href="../lib/bootstrap/bootstrap-reboot.min.css">
 	<link rel="stylesheet" type="text/css" href="../lib/bootstrap/bootstrap.min.css">
 	<style>
+		img {
+			display: block;
+			margin: 0 auto;
+		}
+
 		.box {
 			width: 100%;
 		}
@@ -28,20 +33,44 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<div class="box box1"></div>
-				<div class="box box2"></div>
-				<div class="box box3"></div>
-				<div class="box box3"></div>
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
 			</div>
 			<div class="col">
-				<div class="box box3"></div>
-				<div class="box box1"></div>
-				<div class="box box1"></div>
-				<div class="box box2"></div>
-				<div class="box box2"></div>
-				<div class="box box3"></div>
-				<div class="box box2"></div>
-				<div class="box box1"></div>
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+			</div>
+			<div class="col">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+			</div>
+			<div class="col">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
+				<img src="../test-images/landscape_240x180.png">
 			</div>
 		</div>
 	  </div>
