--- a/UI/layouts/grid.html
+++ b/UI/layouts/grid.html
@@ -6,7 +6,7 @@
 			padding:5px;
 			
 			display: grid;
-			grid-template-columns: 512px 512px;
+			grid-template-columns: 50% 50%;
 		}
 		
 		.box1 {
@@ -23,8 +23,7 @@
 		
 		.box3 {
 			margin: 6px;
-			height: 400px;
-			
+			height: 400px;			
 			background-color: blue;
 		}
 	</style>
