--- a/UI/layouts/inline-column.html
+++ b/UI/layouts/inline-column.html
@@ -3,37 +3,39 @@
 	<style>
 		.container {
 			background-color: lightgrey;
-			padding:5px;
-			width: 980px;
 
-			display: grid;
-			grid-template-columns: 50% 50%;
-			justify-items: center;
+			position: absolute;
+			left: 50%;
+			transform: translate(-50%, 0);
 		}
 
 		.column {
 			margin-left: 3px;
 			margin-right: 3px;
-			min-width: 410px;
+    		float: left;
+			display: inline-block;
 		}
 
-		.box{
+		.box {
 			margin-bottom: 6px;
 			width: 100%; 
 		}
 
 		.box1 {
 			height: 200px;
+			width: 350px;
 			background-color: green;
 		}
 		
 		.box2 {
 			height: 300px;
+			width: 350px;
 			background-color: red;
 		}
 		
 		.box3 {
 			height: 400px;
+			width: 280px;
 			background-color: blue;
 		}
 	</style>
@@ -45,6 +47,16 @@
 			<div class="box box2"></div>
 			<div class="box box3"></div>
 			<div class="box box3"></div>
+		</div>
+
+		<div class="column">
+			<div class="box box1"></div>
+			<div class="box box2"></div>
+			<div class="box box3"></div>
+			<div class="box box3"></div>
+			<div class="box box3"></div>
+			<div class="box box1"></div>
+			<div class="box box1"></div>
 		</div>
 
 		<div class="column">
